<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".HelpActivity">

        <TextView
            android:id="@+id/tv_help_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="#FF8C00"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_help_app_name"
            android:layout_marginTop="12dp"
            android:text="@string/what_is_the_game_tittle"
            android:textColor="#FF8C00"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="5dp"
            android:text="@string/what_is_the_game_text"
            android:textColor="#FF8C00"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_how_to_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_text"
            android:layout_marginTop="10dp"
            android:text="@string/how_to_play_tittle"
            android:textColor="#FF8C00"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_how_to_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_how_to_title"
            android:layout_marginTop="5dp"
            android:text="@string/how_to_play_text"
            android:textColor="#FF8C00"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>