<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ArcadeGameActivity">

    <TextView
        android:id="@+id/classic_g_s_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="#FF8C00"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classic_g_s_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/shape_button"
        android:text="@string/btn_new"
        android:textColor="#080808"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_new"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/shape_button"
        android:text="@string/btn_cont"
        android:textColor="#080808"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/classic_g_s_vers_of_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/vers_of_game"
        android:textColor="#FF8C00"
        android:textSize="14sp" />

</RelativeLayout>